# retinopathy_kit

./: .dockerignore  Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg
data/: rp_diagnosis.txt  sampleSubmission.csv
docker/: Dockerfile.dev  Dockerfile.tests
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-retinopathy_kit_start.py2.ipynb
retinopathy_kit/: config.py
retinopathy_kit/dataset/: data_utils.py  make_dataset.py  splitSubmission.py
retinopathy_kit/features/: build_features.py
retinopathy_kit/models/: general_net.py  inceptionV3.py  model.py  model_utils.py  resnet50.py
retinopathy_kit/visualization/: visualize.py
