[metadata]
name = retinopathy_kit
summary = Retinopathy detection based on transfer learning (KIT)
description-file =
    README.md
author = Valentin Kozlov (KIT)
author-email = valentin.kozlov@kit.edu
version = 0.1.0
license = MIT
home-page = http://github.com/vykozlov/retinopathy_kit
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    retinopathy_kit

[entry_points]

deepaas.model = 
    retinopathy_resnet50 = retinopathy_kit.models.resnet50
    retinopathy_inceptionV3 = retinopathy_kit.models.inceptionV3

